--- a/css/e.css
+++ b/css/e.css
@@ -211,10 +211,10 @@ body.canscroll {
 
 .rhombus div {
     position: sticky;
-    top: 75%;
+    top: 77vh;
     z-index: 20;
     width: 90%;
-    height: 149px;
+    height: 20vh;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -545,4 +545,21 @@ body.canscroll {
     bottom: 4px;
     left: 50%;
     border-left: 1px dashed #fff;
+}
+
+.rects1 {
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
+    background: #fff;
+    transition: 1s;
+    -webkit-filter: blur(1px);
+}
+
+.rects2 {
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
+    border: 1px solid #fff;
+    transition: 1s;
 }
